--- a/test-task/index.html
+++ b/test-task/index.html
@@ -234,6 +234,6 @@
         <app-root></app-root>
         <script src="/runtime.09bd1950a0be0116.js" type="module"></script>
         <script src="/polyfills.20838d1a0ca044fa.js" type="module"></script>
-        <script src="/main.ef42a8315709f36d.js" type="module"></script>
+        <script src="/testTask/test-task/main.ef42a8315709f36d.js" type="module"></script>
     </body>
 </html>
