--- a/test-task/index.html
+++ b/test-task/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
         <title>TestTtask</title>
-        <base href="/testTask/test-task/">
+        <base href="/testTtask/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com">
